--- a/server/package.json
+++ b/server/package.json
@@ -33,9 +33,9 @@
     "config": "^3.3.6",
     "dayjs": "^1.10.6",
     "express": "^4.17.1",
-    "mongoose": "^6.0.4",
     "pino": "^6.13.1",
     "pino-pretty": "^6.0.0",
-    "socket.io": "^4.2.0"
+    "socket.io": "^4.2.0",
+    "nanoid": "^3.1.23"
   }
 }
